// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Execute onItemActivation callback when an item is expanded 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              Title
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Test1
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test2
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-down"
                class="su-angle-down"
              />
            </span>
            Test3
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
            style="padding-left: 25px;"
          >
            Test3.1
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
            style="padding-left: 25px;"
          >
            Test3.2
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Execute onItemActivation callback when an item is expanded 2`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              Title
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Test1
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test2
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test3
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with pencil button when onItemEdit callback is passed 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerButtonCell headerCell"
        >
          <span>
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              Description
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="buttonCell cell"
        >
          <div
            class="cellContent"
          >
            <button>
              <span
                aria-label="su-pen"
                class="su-pen"
              />
            </button>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with plus button when onItemAdd callback is passed 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              Description
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with schema 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              Title
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Test1
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test2
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test3
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with schema and selections 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              Title
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Test1
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test2
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test3
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with two columns 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              Title
            </div>
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Title2
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Test1
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Title2 - Test1
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test2
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Title2 - Test2
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test3
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Title2 - Test3
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
